Various clean ups to Matches and related code.
Improves the code by adopting more concise notation, improving readability and removing some unnecessary null checks and collection copies.