@@ -3,7 +3,6 @@ package games.strategy.triplea.delegate;
 import games.strategy.engine.data.GameData;
 import games.strategy.engine.data.GameMap;
 import games.strategy.engine.data.GamePlayer;
-import games.strategy.engine.data.GameStep;
 import games.strategy.engine.data.RelationshipTracker;
 import games.strategy.engine.data.RelationshipTracker.Relationship;
 import games.strategy.engine.data.RelationshipType;
@@ -33,11 +32,8 @@ import games.strategy.triplea.util.TransportUtils;
 import games.strategy.triplea.util.UnitCategory;
 import games.strategy.triplea.util.UnitSeparator;
 import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -371,7 +367,7 @@ public final class Matches {
       final UnitAttachment ua = UnitAttachment.get(bomberOrRocket.getType());
       final Set<UnitType> allowedTargets =
           ua.getBombingTargets(bomberOrRocket.getData().getUnitTypeList());
-      return allowedTargets == null || allowedTargets.contains(unit.getType());
+      return allowedTargets.contains(unit.getType());
     };
   }
 
@@ -838,10 +834,14 @@ public final class Matches {
     return Territory::isWater;
   }
 
+  public static Predicate<Territory> territoryIsLand() {
+    return territoryIsWater().negate();
+  }
+
   public static Predicate<Territory> territoryIsIsland() {
     return t -> {
       final Collection<Territory> neighbors = t.getData().getMap().getNeighbors(t);
-      return neighbors.size() == 1 && territoryIsWater().test(CollectionUtils.getAny(neighbors));
+      return neighbors.size() == 1 && CollectionUtils.getAny(neighbors).isWater();
     };
   }
 
@@ -850,10 +850,6 @@ public final class Matches {
       final TerritoryAttachment ta = TerritoryAttachment.get(t);
       return ta != null && ta.getVictoryCity() != 0;
     };
-  }
-
-  public static Predicate<Territory> territoryIsLand() {
-    return territoryIsWater().negate();
   }
 
   public static Predicate<Territory> territoryIsEmpty() {
@@ -1006,9 +1002,7 @@ public final class Matches {
 
   public static Predicate<Territory> seaCanMoveOver(
       final GamePlayer player, final GameProperties properties) {
-    return t ->
-        territoryIsWater().test(t)
-            && territoryIsPassableAndNotRestricted(player, properties).test(t);
+    return t -> t.isWater() && territoryIsPassableAndNotRestricted(player, properties).test(t);
   }
 
   public static Predicate<Territory> airCanFlyOver(
@@ -1100,15 +1094,13 @@ public final class Matches {
           }
         }
       }
-      final boolean isWater = territoryIsWater().test(t);
-      final boolean isLand = territoryIsLand().test(t);
-      if (hasLandUnitsNotBeingTransportedOrBeingLoaded && !isLand) {
+      if (hasLandUnitsNotBeingTransportedOrBeingLoaded && t.isWater()) {
         return false;
       }
-      if (hasSeaUnitsNotBeingTransported && !isWater) {
+      if (hasSeaUnitsNotBeingTransported && !t.isWater()) {
         return false;
       }
-      if (isLand) {
+      if (!t.isWater()) {
         if (hasLandUnitsNotBeingTransportedOrBeingLoaded
             && !relationshipTracker.canMoveLandUnitsOverOwnedLand(
                 playerWhoOwnsAllTheUnitsMoving, t.getOwner())) {
@@ -1149,39 +1141,21 @@ public final class Matches {
     return unit -> {
       BigDecimal left = unit.getMovementLeft();
       final UnitAttachment ua = UnitAttachment.get(unit.getType());
-      final GamePlayer player = unit.getOwner();
       if (ua.getIsAir()) {
-        final TerritoryAttachment taStart = TerritoryAttachment.get(route.getStart());
-        final TerritoryAttachment taEnd = TerritoryAttachment.get(route.getEnd());
-        if (taStart != null && taStart.getAirBase()) {
+        if (TerritoryAttachment.hasAirBase(route.getStart())) {
           left = left.add(BigDecimal.ONE);
         }
-        if (taEnd != null && taEnd.getAirBase()) {
+        if (TerritoryAttachment.hasAirBase(route.getEnd())) {
           left = left.add(BigDecimal.ONE);
         }
       }
-      final GameStep stepName = unit.getData().getSequence().getStep();
-      if (ua.getIsSea() && stepName.getDisplayName().equals("Non Combat Move")) {
+      if (ua.getIsSea() && unit.getData().getSequence().getStep().isNonCombat()) {
         // If a zone adjacent to the starting and ending sea zones are allied naval bases, increase
         // the range.
         // TODO Still need to be able to handle stops on the way
-        // (history to get route.getStart()
-        for (final Territory terrNext : unit.getData().getMap().getNeighbors(route.getStart(), 1)) {
-          final TerritoryAttachment taNeighbor = TerritoryAttachment.get(terrNext);
-          if (taNeighbor != null
-              && taNeighbor.getNavalBase()
-              && unit.getData().getRelationshipTracker().isAllied(terrNext.getOwner(), player)) {
-            for (final Territory terrEnd :
-                unit.getData().getMap().getNeighbors(route.getEnd(), 1)) {
-              final TerritoryAttachment taEndNeighbor = TerritoryAttachment.get(terrEnd);
-              if (taEndNeighbor != null
-                  && taEndNeighbor.getNavalBase()
-                  && unit.getData().getRelationshipTracker().isAllied(terrEnd.getOwner(), player)) {
-                left = left.add(BigDecimal.ONE);
-                break;
-              }
-            }
-          }
+        if (hasNeighboringAlliedNavalBase(route.getStart(), unit.getOwner())
+            && hasNeighboringAlliedNavalBase(route.getStart(), unit.getOwner())) {
+          left = left.add(BigDecimal.ONE);
         }
       }
       if (left.compareTo(BigDecimal.ZERO) < 0) {
@@ -1194,6 +1168,16 @@ public final class Matches {
       }
       return hasMovementForRoute;
     };
+  }
+
+  private static boolean hasNeighboringAlliedNavalBase(Territory t, GamePlayer player) {
+    return t.getData().getMap().getNeighbors(t).stream()
+        .anyMatch(t2 -> hasAlliedNavalBase(t2, player));
+  }
+
+  private static boolean hasAlliedNavalBase(Territory t, GamePlayer player) {
+    return TerritoryAttachment.hasNavalBase(t)
+        && t.getData().getRelationshipTracker().isAllied(t.getOwner(), player);
   }
 
   public static Predicate<Unit> unitHasMovementLeft() {
@@ -1554,7 +1538,7 @@ public final class Matches {
   }
 
   public static Predicate<Unit> unitIsOfTypes(final UnitType... types) {
-    return unitIsOfTypes(new HashSet<>(Arrays.asList(types)));
+    return unitIsOfTypes(Set.of(types));
   }
 
   public static Predicate<Territory> territoryWasFoughtOver(final BattleTracker tracker) {
@@ -1667,8 +1651,7 @@ public final class Matches {
         return true;
       }
       if (unitIsSea().test(damagedUnit)) {
-        final List<Territory> neighbors =
-            new ArrayList<>(gameMap.getNeighbors(territory, territoryIsLand()));
+        final Collection<Territory> neighbors = gameMap.getNeighbors(territory, territoryIsLand());
         for (final Territory current : neighbors) {
           final Predicate<Unit> repairUnitLand =
               alliedUnit(player, relationshipTracker)
@@ -1680,8 +1663,7 @@ public final class Matches {
           }
         }
       } else if (unitIsLand().test(damagedUnit)) {
-        final List<Territory> neighbors =
-            new ArrayList<>(gameMap.getNeighbors(territory, territoryIsWater()));
+        final Collection<Territory> neighbors = gameMap.getNeighbors(territory, territoryIsWater());
         for (final Territory current : neighbors) {
           final Predicate<Unit> repairUnitSea =
               alliedUnit(player, relationshipTracker)
@@ -1741,13 +1723,10 @@ public final class Matches {
       }
       if (unitIsSea().test(unitWhichWillGetBonus)) {
         final Predicate<Unit> givesBonusUnitLand = givesBonusUnit.and(unitIsLand());
-        final List<Territory> neighbors =
-            new ArrayList<>(gameMap.getNeighbors(territory, territoryIsLand()));
-        for (final Territory current : neighbors) {
-          if (current.getUnitCollection().anyMatch(givesBonusUnitLand)) {
-            return true;
-          }
-        }
+        final Collection<Territory> neighbors = gameMap.getNeighbors(territory, territoryIsLand());
+        return neighbors.stream()
+            .map(Territory::getUnitCollection)
+            .anyMatch(uc -> uc.anyMatch(givesBonusUnitLand));
       }
       return false;
     };
@@ -1974,7 +1953,7 @@ public final class Matches {
   public static Predicate<Territory> territoryAllowsCanMoveLandUnitsOverOwnedLand(
       final GamePlayer ownerOfUnitsMoving, final RelationshipTracker relationshipTracker) {
     return t -> {
-      if (!territoryIsLand().test(t)) {
+      if (t.isWater()) {
         return true;
       }
       final GamePlayer territoryOwner = t.getOwner();
@@ -1992,7 +1971,7 @@ public final class Matches {
   public static Predicate<Territory> territoryAllowsCanMoveAirUnitsOverOwnedLand(
       final GamePlayer ownerOfUnitsMoving, final RelationshipTracker relationshipTracker) {
     return t -> {
-      if (!territoryIsLand().test(t)) {
+      if (t.isWater()) {
         return true;
       }
       final GamePlayer territoryOwner = t.getOwner();
@@ -2140,13 +2119,7 @@ public final class Matches {
   static Predicate<Unit> unitCanOnlyPlaceInOriginalTerritories() {
     return u -> {
       final UnitAttachment ua = UnitAttachment.get(u.getType());
-      final Set<String> specialOptions = ua.getSpecial();
-      for (final String option : specialOptions) {
-        if (option.equals("canOnlyPlaceInOriginalTerritories")) {
-          return true;
-        }
-      }
-      return false;
+      return ua.getSpecial().contains("canOnlyPlaceInOriginalTerritories");
     };
   }
 
